<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.smartroad.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home"
        xmlns:tools="http://schemas.android.com/tools" />

    <fragment
        android:id="@+id/mapFragment"
        android:name="com.smartroad.ui.map.MapFragment"
        android:label="@string/nav_map"
        xmlns:tools="http://schemas.android.com/tools"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/reportFragment"
        android:name="com.smartroad.ui.report.ReportFragment"
        android:label="@string/nav_report"
        xmlns:tools="http://schemas.android.com/tools"
        tools:layout="@layout/fragment_report" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.smartroad.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        xmlns:tools="http://schemas.android.com/tools"
        tools:layout="@layout/fragment_profile" />
</navigation>
